# BTL_QLSV

./: .gitignore  CMakeLists.txt  README.MD
data/: students.txt
include/: DataManager.h  Menu.h  Person.h  Student.h  Utils.h
src/: DataManager.cpp  Menu.cpp  Student.cpp  Utils.cpp  main.cpp
